--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   fancy_bottom_navigation: ^0.3.3
   onesignal_flutter: ^3.2.8
   permission_handler: ^8.3.0
+  uni_links: ^0.5.1
 
 dev_dependencies:
   flutter_test:
