--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   onesignal_flutter: ^3.2.8
   permission_handler: ^8.3.0
   uni_links: ^0.5.1
+  url_launcher: ^6.0.18
 
 dev_dependencies:
   flutter_test:
