--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   permission_handler: ^8.3.0
   uni_links: ^0.5.1
   url_launcher: ^6.0.18
+  flutter_launcher_icons: ^0.9.0
 
 dev_dependencies:
   flutter_test:
