--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   flutter_launcher_icons: ^0.9.0
   shared_preferences: ^2.0.12
   sqflite: ^2.0.2
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
