--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
   http: ^0.13.4
   card_swiper: ^1.0.4
   fancy_bottom_navigation: ^0.3.3
+  cached_network_image: ^3.2.0
+  skeleton_text: ^3.0.0
   onesignal_flutter: ^3.2.8
   permission_handler: ^8.3.0
   uni_links: ^0.5.1
