--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -19,7 +19,6 @@
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
 
@@ -31,11 +30,12 @@
                 <category android:name="android.intent.category.BROWSABLE" />
                 <!-- Accepts URIs that begin with "example://gizmos” -->
                 <data android:host="customer" android:scheme="sufismart" />
-                <data android:host="sufismart" android:scheme="http" />
-                <data android:host="sufismart" android:scheme="https" />
+                <data android:host="sufismart.com" android:scheme="http" />
+                <data android:host="sufismart.com" android:scheme="https" />
             </intent-filter>
+
         </activity>
-        <!--
+        <!--›
  Don't delete the meta-data below.
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java
         -->
