--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -52,7 +52,7 @@
 			<string>customer</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>Sufismart</string>
+				<string>sufismart</string>
 			</array>
 		</dict>
 		<dict>
@@ -62,7 +62,7 @@
 			<string>http</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>dufismart</string>
+				<string>sufismart.com</string>
 			</array>
 		</dict>
 		<dict>
@@ -72,7 +72,7 @@
 			<string>https</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>dufismart</string>
+				<string>dufismart.com</string>
 			</array>
 		</dict>
 	</array>
