--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   intl: ^0.17.0
   image_picker: ^0.8.2
   flutter_image_compress: ^1.1.0
+  image_picker_for_web: ^2.1.6
 
 dev_dependencies:
   flutter_test:
