--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -48,7 +48,9 @@ android {
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
+        multiDexEnabled true
     }
+    
 
     buildTypes {
         release {
