--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,9 +31,10 @@ dependencies:
   intl: ^0.17.0
   image_picker: ^0.8.2
   flutter_image_compress: ^1.1.0
- 
- 
-  
+  flutter_background_service: ^1.0.4
+  flutter_background_service_android: ^1.0.2
+  flutter_background_service_ios: ^1.0.2
+  geolocator: ^8.2.0
 
 dev_dependencies:
   flutter_test:
