--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,8 +31,7 @@ dependencies:
   intl: ^0.17.0
   image_picker: ^0.8.2
   flutter_image_compress: ^1.1.0
- 
- 
+  google_maps_flutter: ^2.1.3 
   
 
 dev_dependencies:
