--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   flutter_background_service_android: ^1.0.2
   flutter_background_service_ios: ^1.0.2
   geolocator: ^8.2.0
+  google_maps_flutter: ^2.1.3
 
 dev_dependencies:
   flutter_test:
