--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,7 @@ dependencies:
   fancy_bottom_navigation: ^0.3.3
   cached_network_image: ^3.2.0
   skeleton_text: ^3.0.0
-  onesignal_flutter: ^3.2.8
+  onesignal_flutter: 3.1.0
   permission_handler: ^8.3.0
   uni_links: ^0.5.1
   url_launcher: ^6.0.18
