--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -10,6 +10,8 @@
     <application android:name="${applicationName}" android:icon="@mipmap/launcher_icon" android:label="Sufi Smart">
         <service android:name=".BackNotife" android:enabled="true" android:exported="true"></service>
         <service android:name=".MyIntentService" android:exported="false" />
+        
+        <meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyD8EMxA99sBnY7qLW3wwCPAJ8HbIK3As70" />
 
         <activity android:name=".MainActivity" android:configChanges="orientation|keyboardHidden|keyboard|screenSize|smallestScreenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode" android:exported="true" android:hardwareAccelerated="true" android:launchMode="singleTop" android:theme="@style/LaunchTheme" android:windowSoftInputMode="adjustResize">
 
