--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   flutter_background_service_ios: ^1.0.2
   geolocator: ^8.2.0
   google_maps_flutter: ^2.1.3
+  sprintf : ^6.0.0
 
 dev_dependencies:
   flutter_test:
@@ -48,6 +49,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
+    - dbmigration/
+    - dbquery/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
