--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   sprintf: ^6.0.0
   visibility_detector: ^0.2.2
   random_string: ^2.3.1
+  flutter_locker: ^2.0.3
 
 dev_dependencies:
   flutter_test:
