--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   geolocator: ^8.2.0
   google_maps_flutter: ^2.1.3
   sprintf: ^6.0.0
+  random_string: ^2.3.1
 
 dev_dependencies:
   flutter_test:
