--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   google_maps_flutter: ^2.1.3
   sprintf: ^6.0.0
   random_string: ^2.3.1
+  visibility_detector: ^0.2.2
 
 dev_dependencies:
   flutter_test:
