--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   random_string: ^2.3.1
   visibility_detector: ^0.2.2
   flutter_locker: ^2.0.3
+  flutter_voip_kit: ^0.0.6
 
 dev_dependencies:
   flutter_test:
