--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -67,4 +67,5 @@ flutter {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.airbnb:deeplinkdispatch:3.1.1'
+    implementation 'com.android.support:multidex:1.0.3' 
 }
