--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -10,12 +10,22 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" /> 
 
-    <application android:name="${applicationName}" android:icon="@mipmap/launcher_icon" android:label="Sufi Smart" android:usesCleartextTraffic="true">
+    <application android:name="${applicationName}"
+     android:icon="@mipmap/launcher_icon" android:label="Sufi Smart" 
+     android:supportsRtl="true"
+    android:usesCleartextTraffic="true" >
         <service android:name=".BackNotife" android:enabled="true" android:exported="true"></service>
         <service android:name=".MyIntentService" android:exported="false" />
         
 
-        <activity android:name=".MainActivity" android:configChanges="orientation|keyboardHidden|keyboard|screenSize|smallestScreenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode" android:exported="true" android:hardwareAccelerated="true" android:launchMode="singleTop" android:theme="@style/LaunchTheme" android:windowSoftInputMode="adjustResize">
+        <activity android:name=".MainActivity" 
+        android:configChanges="orientation|keyboardHidden|keyboard|screenSize|smallestScreenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode" 
+        android:exported="true" 
+        android:hardwareAccelerated="true" 
+        android:screenOrientation="portrait" 
+        android:launchMode="singleTop" 
+        android:theme="@style/LaunchTheme" 
+        android:windowSoftInputMode="adjustResize">
 
             <!--
                  Specifies an Android theme to apply to this Activity as soon as
