--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -8,8 +8,22 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE"/>   
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" /> 
-
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />  
+    <uses-permission android:name="android.permission.QUERY_ALL_PACKAGES"/>
+    <queries>
+        <intent>
+            <action android:name="android.intent.action.VIEW" />
+            <data android:scheme="https" />
+        </intent>
+        <intent>
+            <action android:name="android.intent.action.DIAL" />
+            <data android:scheme="tel" />
+        </intent>
+        <intent>
+            <action android:name="android.intent.action.SEND" />
+            <data android:mimeType="*/*" />
+        </intent>
+    </queries>  
     <application android:name="${applicationName}"
      android:icon="@mipmap/launcher_icon" android:label="Sufi Smart" 
      android:supportsRtl="true"
@@ -51,6 +65,8 @@
                 <data android:host="sufismart.com" android:scheme="http" />
                 <data android:host="sufismart.com" android:scheme="https" />
             </intent-filter>
+
+              
 
         </activity>
         <!--›
