--- a/flutter_launcher_icons.yaml
+++ b/flutter_launcher_icons.yaml
@@ -4,5 +4,6 @@ dev_dependencies:
 flutter_icons:
   android: "launcher_icon" 
   ios: true
+  remove_alpha_ios : true
   image_path: "assets/launcher_suzuki.png"
 
