commit agie 20220815 4 windows

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -76,6 +76,8 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<true/>
+	<key>NSPhotoLibraryUsageDescription</key>
+    <string>This app need to access your gallery to take picture for profile photo</string>
 	<key>NSCameraUsageDescription</key>
 	<string>This app need to access your camera to take picture for profile photo</string>
 	<key>NSMicrophoneUsageDescription</key>
