--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -69,6 +69,12 @@
 	<string>this application requires to use your microphone</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>This app need to access your gallery to take picture for profile photo</string>
+	<key>OneSignal_app_groups_key</key>
+	<string>group.com.example.sufismart.onesignal</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>remote-notification</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
