--- a/flutter_launcher_icons.yaml
+++ b/flutter_launcher_icons.yaml
@@ -5,5 +5,5 @@ flutter_icons:
   android: "launcher_icon" 
   ios: true
   remove_alpha_ios : true
-  image_path: "assets/launcher_suzuki.png"
+  image_path: "assets/sufismart.png"
 
