--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: A new Flutter project.
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-version: 1.0.0+1
+version: 1.4.0+16
 
 environment:
   sdk: ">=2.15.1 <3.0.0"
@@ -38,6 +38,7 @@ dependencies:
   flutter_widget_from_html: ^0.8.5
   webview_flutter: ^3.0.0  
   device_information: ^0.0.4
+  change_app_package_name: ^1.1.0
 
 dev_dependencies:
   flutter_test:
