--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -48,6 +48,11 @@ android {
         main.java.srcDirs += 'src/main/kotlin'
     }
 
+     lintOptions {
+        disable 'InvalidPackage'
+        checkReleaseBuilds false //<- add this line
+    }
+
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "suzuki.sufi.smart"
