--- a/ios/OneSignalNotificationServiceExtension/OneSignalNotificationServiceExtension.entitlements
+++ b/ios/OneSignalNotificationServiceExtension/OneSignalNotificationServiceExtension.entitlements
@@ -4,7 +4,7 @@
 <dict>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.com.example.sufismart.onesignal</string>
+		<string>group.suzuki.sufi.smart.onesignal</string>
 	</array>
 </dict>
 </plist>
