--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,13 +1,13 @@
 name: sufismart
 description: A new Flutter project.
 
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 version: 1.4.0+16
 
 environment:
   sdk: ">=2.15.1 <3.0.0"
- 
+
 dependencies:
   flutter:
     sdk: flutter
@@ -15,7 +15,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   provider: ^6.0.1
   font_awesome_flutter: ^9.2.0
-  http: ^0.13.5
+  http: ^0.13.4
   dio: ^4.0.4
   card_swiper: ^1.0.4
   fancy_bottom_navigation: ^0.3.3
@@ -36,15 +36,13 @@ dependencies:
   flutter_background_service_ios: ^1.0.2
   geolocator: ^8.2.0
   flutter_widget_from_html: ^0.8.5
-  webview_flutter: ^3.0.0  
-  device_information: ^0.0.4
-  photo_view: ^0.14.0
+  webview_flutter: ^3.0.0
 
 dev_dependencies:
   flutter_test:
-    sdk: flutter 
-  flutter_lints: ^1.0.0 
-  
+    sdk: flutter
+  flutter_lints: ^2.0.3
+
 flutter:
   uses-material-design: true
 
