--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,50 +1,51 @@
 name: sufismart
 description: A new Flutter project.
 
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 version: 1.4.2+27
 
 environment:
   sdk: ">=2.15.1 <3.0.0"
- 
+
 dependencies:
   flutter:
     sdk: flutter
 
   cupertino_icons: ^1.0.2
   provider: ^6.0.1
-  font_awesome_flutter: ^9.2.0
-  http: ^0.13.4
-  dio: ^4.0.4
-  card_swiper: ^1.0.4
+  font_awesome_flutter: ^10.4.0
+  http: ^1.0.0
+  dio: ^5.0.0
+  card_swiper: ^2.0.4
   fancy_bottom_navigation: ^0.3.3
-  cached_network_image: ^3.2.0
-  skeleton_text: ^3.0.0
-  onesignal_flutter: ^3.2.8
-  permission_handler: ^8.3.0
+  cached_network_image: ^3.2.3
+  skeleton_text: ^3.0.1
+  onesignal_flutter: ^3.5.1
+  permission_handler: ^10.4.5
   uni_links: ^0.5.1
-  url_launcher: ^6.0.18
-  flutter_launcher_icons: ^0.9.0
-  shared_preferences: ^2.0.12
-  sqflite: ^2.0.2
-  intl: ^0.17.0
-  image_picker: ^0.8.2
-  flutter_image_compress: ^1.1.0
-  flutter_background_service: ^1.0.4
-  flutter_background_service_android: ^1.0.2
-  flutter_background_service_ios: ^1.0.2
-  geolocator: ^8.2.0
-  flutter_widget_from_html: ^0.8.5
-  webview_flutter: ^3.0.0  
-  device_information: ^0.0.4
-  change_app_package_name: ^1.1.0
+  url_launcher: ^6.1.10
+  flutter_launcher_icons: ^0.13.1
+  shared_preferences: ^2.0.18
+  sqflite: ^2.2.8
+  intl: ^0.18.1
+  image_picker: ^1.0.4
+  flutter_image_compress: ^2.0.3
+  flutter_background_service: ^3.0.1
+  flutter_background_service_android: ^4.0.0
+  flutter_background_service_ios: ^3.0.0
+  geolocator: ^10.0.0
+  # flutter_widget_from_html: ^0.10.0
+  webview_flutter: ^3.0.0
+  package_info_plus: ^4.2.0
+  # device_information: ^0.0.4
+  # change_app_package_name: ^1.1.0
 
 dev_dependencies:
   flutter_test:
-    sdk: flutter 
-  flutter_lints: ^1.0.0 
-  
+    sdk: flutter
+  flutter_lints: ^1.0.0
+
 flutter:
   uses-material-design: true
 
