--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="suzuki.sufi.smart">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.sufismarttrain.name">
 
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
@@ -11,7 +11,7 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />  
        
     <application android:name="${applicationName}"
-     android:icon="@mipmap/launcher_icon" android:label="Sufi Smart" 
+     android:icon="@mipmap/launcher_icon" android:label="Sufi Smart Train" 
      android:supportsRtl="true"
     android:usesCleartextTraffic="true" >
         <service android:name=".BackNotife" android:enabled="true" android:exported="true"></service>
