--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   flutter_background_service_android: ^4.0.0
   flutter_background_service_ios: ^3.0.0
   geolocator: ^10.0.0
-  # flutter_widget_from_html_core: ^0.10.4
+  flutter_widget_from_html_core: ^0.10.4
   webview_flutter: ^3.0.0
   package_info_plus: ^4.2.0
   # device_information: ^0.0.4
